Some small text fixes + fix links to contact with me

--- a/css/main.css
+++ b/css/main.css
@@ -2797,8 +2797,12 @@ form loader #submit-loader {
   position: relative;
 }
 
-.contact-info p {
+.contact-info a {
   color: #555;
+}
+
+.contact-info a:hover {
+  color: #fff;
 }
 
 .contact-info .collapse {
