--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #95bfbf;
+  background: #393341b8;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -384,7 +384,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #95bfbf;
+  color: #393341b8;
 }
 
 dd {
@@ -673,7 +673,7 @@ input[type="password"]:focus,
 textarea:focus,
 select:focus {
   color: #1c0d02;
-  border-bottom: 1px solid #95bfbf;
+  border-bottom: 1px solid #393341b8;
 }
 
 label,
@@ -845,8 +845,8 @@ button.stroke.large,
 
 button.stroke:hover,
 .button.stroke:hover {
-  border: 3px solid #95bfbf;
-  color: #95bfbf;
+  border: 3px solid #393341b8;
+  color: #393341b8;
 }
 
 button::-moz-focus-inner,
@@ -869,26 +869,6 @@ input::-moz-focus-inner {
   right: 1.8rem;
   top: 1.8rem;
   cursor: pointer;
-}
-
-.ss-error {
-  background-color: #ffd1d2;
-  color: #e65153;
-}
-
-.ss-success {
-  background-color: #c8e675;
-  color: #758c36;
-}
-
-.ss-info {
-  background-color: #d7ecfb;
-  color: #4a95cc;
-}
-
-.ss-notice {
-  background-color: #fff099;
-  color: #bba31b;
 }
 
 .drop-cap:first-letter {
@@ -1014,7 +994,7 @@ dictionary
 }
 
 .stats-tabs li a:hover {
-  color: #95bfbf;
+  color: #393341b8;
 }
 
 .stats-tabs li a em {
@@ -1177,7 +1157,7 @@ dictionary
 .section-intro h3 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 2rem;
-  color: #95bfbf;
+  color: #393341b8;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
   margin-bottom: 0;
@@ -1536,7 +1516,7 @@ header .header-logo a {
   background: #151515;
   width: 100%;
   height: 100%;
-  background-image: url(../images/bg.jpg);
+  background-image: url(../images/home-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -1820,7 +1800,7 @@ header .header-logo a {
 #about h3 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.6rem;
-  color: #95bfbf;
+  color: #393341b8;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
   margin: 0 0 0 0.3rem;
@@ -1839,7 +1819,7 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   width: 50%;
-  background-image: url(../images/bg-about.jpg);
+  background-image: url(../images/about-bg.jpg);
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1923,7 +1903,7 @@ header .header-logo a {
   top: 0;
   left: 0;
   color: rgba(46, 22, 3, 0.4);
-  color: #95bfbf;
+  color: #393341b8;
 }
 
 .about-services ul.services .icon-wrap i {
@@ -2043,8 +2023,7 @@ header .header-logo a {
 }
 
 #skills {
-  background-color: #1f0e01;
-  background-image: url(../images/skills-bg.jpg);
+  background-color: #4a4a46;
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -2099,7 +2078,6 @@ header .header-logo a {
 
 #skills .section-intro h3 {
   color: rgba(255, 255, 255, 0.35);
-  color: #567370;
 }
 
 #skills .section-intro h1 {
@@ -2155,7 +2133,7 @@ header .header-logo a {
 
 #credentials .credentials-content h2 {
   margin-bottom: 4.8rem;
-  color: #95bfbf;
+  color: #393341b8;
   padding-left: 8rem;
   font-size: 1.8rem;
   text-transform: uppercase;
@@ -2209,7 +2187,7 @@ header .header-logo a {
   height: 4.8rem;
   width: 4.8rem;
   line-height: 4.8rem;
-  background: #95bfbf;
+  background: #4a4a46;
   border-radius: 50%;
   text-align: center;
   color: #ffffff;
@@ -2610,7 +2588,8 @@ header .header-logo a {
 }
 
 #contact .section-intro h3 {
-  color: #567370;
+  color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 15px;
 }
 
 #contact .section-intro p.lead {
@@ -2674,7 +2653,7 @@ contact form .contact-form {
   padding: 0 2rem;
   margin: 0;
   color: #ffffff;
-  background: #95bfbf;
+  background: #393341b8;
 }
 
 #contact form .form-field label::after {
@@ -2684,7 +2663,7 @@ contact form .contact-form {
   margin-top: -6px;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-right: 5px solid #95bfbf;
+  border-right: 5px solid #393341b8;
   content: "";
 }
 
@@ -2709,7 +2688,7 @@ contact form .contact-form {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-  border-color: #95bfbf;
+  border-color: #393341b8;
   color: #ffffff;
 }
 
@@ -2719,7 +2698,7 @@ contact form .contact-form {
 }
 
 #contact textarea:focus {
-  border-color: #95bfbf;
+  border-color: #393341b8;
   color: #ffffff;
 }
 
@@ -2738,7 +2717,7 @@ contact form .contact-form {
 
 #contact button.submitform:hover,
 #contact button.submitform:focus {
-  background: #95bfbf;
+  background: #393341b8;
 }
 
 #message-warning,
@@ -2798,7 +2777,7 @@ form loader #submit-loader {
 }
 
 .contact-info a {
-  color: #555;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .contact-info a:hover {
